# library-tools

./: .dockerignore  .gitignore  .hadolint.yaml  .pre-commit-config.yaml  .spec.json  Dockerfile  README.md  pyproject.toml  renovate.json5  zensical.toml
.github/ISSUE_TEMPLATE/: request-new-image.yml
.github/workflows/: docs.yaml
docs/: cli.md  design.md  faq.md  index.md  lifecycle.md  roadmap.md  schema.md  technical-design.md  tools.md  vision.md
docs/best-practices/: container-images.md
docs/plans/: 2026-01-30-library-scan-design.md  2026-01-30-library-scan.md
images/base/: Dockerfile
images/python/: Dockerfile
manifests/: base.yaml  python.yaml
tests/: test_buildx.py  test_default.py  test_manifest_runtime.py  test_schema.py  test_tooling_schema.py
tests/cli/: conftest.py  test_build.py  test_fixtures.py  test_hadolint.py  test_hadolint_integration.py  test_helpers.py  test_init.py  test_main_dispatch.py  test_refurbish.py  test_renovate.py  test_trivy.py  test_validate.py
tests/cli/fixtures/: Dockerfile.hadolint.good  Dockerfile.sample  manifest.invalid.yml  manifest.valid.yml
tests/parsers/: test_hadolint_parser.py  test_refurbish_parser.py  test_registry.py  test_trivy_parser.py
tests/tools/: test_runner_catalog.py  test_runner_execution.py  test_runner_resolve.py  test_runner_tokens.py  test_runner_workspace.py
tests/utils/: test_docker.py  test_fetch.py  test_generate.py  test_git_fetch.py
