[project]
name = "library"
version = "0.1.0"
description = "CANFAR Science Platform Container Library"
readme = "README.md"
authors = [
    { name = "Shiny Brar", email = "shiny.brar@nrc-cnrc.gc.ca" }
]
requires-python = ">=3.10"
dependencies = [
    "docker>=7.1.0",
    "pydantic>=2.12.5",
    "pyyaml>=6.0.3",
    "richforms>=0.4.0",
    "typer>=0.21.1",
]

[project.scripts]
library = "library.cli.main:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["library"]
include = ["library/.hadolint.yaml", "library/renovate.json5"]

[tool.hatch.build.targets.sdist]
include = ["library/.hadolint.yaml", ".hadolint.yaml", "library/renovate.json5", "renovate.json5"]

[dependency-groups]
dev = [
    "jsonschema-markdown>=2025.11.0",
    "pre-commit>=4.5.1",
    "pytest>=9.0.2",
    "pytest-cov>=7.0.0",
    "pyyaml>=6.0.3",
    "ty>=0.0.11",
    "zensical>=0.0.15",
]

[tool.interrogate]
ignore-init-method = true
ignore-init-module = false
ignore-magic = false
ignore-semiprivate = false
ignore-private = false
ignore-property-decorators = false
ignore-module = false
ignore-nested-functions = false
ignore-nested-classes = true
ignore-setters = false
fail-under = 80
exclude = ["setup.py", "docs", "build"]
ignore-regex = ["^get$", "^mock_.*", ".*BaseClass.*"]
verbose = 3
quiet = false
whitelist-regex = []
color = true

[tool.mypy]
explicit_package_bases = true

[tool.pytest.ini_options]
markers = [
    "integration: tests that require Docker",
]
